syntax = "proto3";

import "google/protobuf/timestamp.proto";

package grpc;

service DonnerService {
    rpc GetCurrentUser (GetCurrentUserRequest) returns (GetCurrentUserResponse) {
    }
    rpc UpdateUserName (UpdateUserNameRequest) returns (UpdateUserNameResponse) {
    }

    rpc ListStashes (ListStashesRequest) returns (ListStashesResponse) {
    }

    rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse) {
    }
    rpc LookupTransaction (LookupTransactionRequest) returns (LookupTransactionResponse) {
    }
    rpc NewTransaction (NewTransactionRequest) returns (NewTransactionResponse) {
    }
    rpc SettleTransaction (SettleTransactionRequest) returns (SettleTransactionResponse) {
    }

    rpc ListWorlds (ListWorldsRequest) returns (ListWorldsResponse) {
    }
    rpc JoinWorld (JoinWorldRequest) returns (JoinWorldResponse) {
    }
    rpc CreateWorld (CreateWorldRequest) returns (CreateWorldResponse) {

    }

    rpc SubscribeTransactions (SubscribeTransactionsRequest) returns (stream SubscribeTransactionsResponse) {

    }
}

// Requests
message GetCurrentUserRequest {
}

message UpdateUserNameRequest {
    string username = 1;
}

message ListStashesRequest {
}

message ListTransactionsRequest {
    TransactionFilter filter = 1;
}

message NewTransactionRequest {
    Kind kind = 1;
    string payerId = 2;
    string receiverId = 3;
    string callbackUrl = 4;
    bool isPublic = 5;
    ToLightningParams lightningParams = 6;
    ToStashParams stashParams = 7;

    enum Kind {
        STASH = 0;
        LIGHTNING = 1;
    }
}

message SettleTransactionRequest {
    Kind kind = 1;
    string transactionId = 2;
    WithStashParams withStash = 3;
    WithLightningParams withLightning = 4;

    enum Kind {
        STASH = 0;
        LIGHTNING = 1;
    }
}

message ToStashParams {
    string worldId = 1;
    int64 amount = 2;
    string description = 3;
}

message ToLightningParams {
    string invoice = 1;
}

message WithStashParams {
    string worldId = 3;
}

message WithLightningParams {
    string preImage = 1;
}

message LookupTransactionRequest {
    string txId = 1;
}

message ListWorldsRequest {
}

message JoinWorldRequest {
    string worldId = 1;
}

message CreateWorldRequest {
    string worldName = 1;
}

message SubscribeTransactionsRequest {
    TransactionFilter filter = 1;
}

// Models
message User {
    string id = 1;
    string username = 2;
}

message World {
    string id = 1;
    string name = 2;
}

message Stash {
    string id = 1;
    int64 balance = 2;
    World world = 3;
}

message Transaction {
    string id = 1;
    int64 amount = 2;
    string descripton = 3;
    string payerId = 4;
    string receiverId = 5;
    bool fullfilled = 6;
    string invoice = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp fullfilledAt = 9;
}

message TransactionFilter {
    Status status = 1;
    Role role = 2;
    string worldId = 3;

    enum Status {
        ALL = 0;
        OPEN = 1;
        SETTLED = 2;
    }

    enum Role {
        BOTH = 0;
        PAYER = 1;
        RECEIVER = 2;
    }
}

// Responses
message GetCurrentUserResponse {
    User user = 1;
    bool canNameChange = 2;
    repeated World worlds = 3;
}

message UpdateUserNameResponse {
    User user = 1;
}

message ListStashesResponse {
    repeated Stash stashes = 1;
}

message ListTransactionsResponse {
    repeated Transaction transactions = 1;
}

message NewTransactionResponse {
    Transaction transaction = 1;
}

message SettleTransactionResponse {
    Transaction transaction = 1;
}

message LookupTransactionResponse {
    Transaction transaction = 1;
}


message ListWorldsResponse {
    repeated World worlds = 1;
}

message JoinWorldResponse {
    World world = 1;
}

message CreateWorldResponse {
    World world = 1;
}

message SubscribeTransactionsResponse {
    Transaction transaction = 1;
}